リファクタリング

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="container">
-    <div id="charts-box">
+    <div id="charts-wrapper">
     </div>
     <div id="file-drop-zone">
       <input class="file-field" type="file">
