--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <title></title>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Watchable</a>
-    </div>
-  </nav>
+  <header></header>
   <div class="row main-wrapper">
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
